[package]
name = "gun"
description = "The Gun database, in Rust"
authors = [
  "Artemciy <artemciy@gmail.com>",
  "GiraffeKey <giraffekey@tutanota.com>",
]
version = "0.1.2"
edition = "2018"
license = "MIT"
keywords = ["p2p", "graph", "offline-first", "crdt", "database"]
documentation = "https://docs.rs/gun/"
repository = "https://github.com/ArtemGr/gun"

[lib]
name = "gun"
path = "src/gun.rs"

[features]
default = ["std", "default-uuid"]
std = ["tungstenite"]
default-uuid = ["uuid"]

[dependencies]
anyhow = "1.0"
fnv = "1.0"
log = "0.4"
rand = "0.7"
serde_json = "1.0"

tungstenite = { version = "0.11", optional = true }
uuid = { version = "0.8", features = ["v4"], optional = true }

[target.'cfg(target_arch = "wasm-32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
env_logger = "0.8"
