[package]
name = "gun"
description = "The Gun database, in Rust"
authors = [
	"Artemciy <artemciy@gmail.com>",
	"GiraffeKey <giraffekey@tutanota.com>",
]
version = "0.1.2"
edition = "2018"
license = "MIT"
keywords = ["p2p", "graph", "offline-first", "crdt", "database"]
documentation = "https://docs.rs/gun/"
repository = "https://github.com/ArtemGr/gun"

[lib]
name = "gun"
path = "src/gun.rs"

[features]
default = ["std", "default-uuid"]
std = []
default-uuid = ["uuid"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
fnv = "1.0"
log = "0.4"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

uuid = { version = "0.8", features = ["v4"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
