[package]
name = "gun-websockets-tokio-example"
version = "0.1.0"
authors = ["GiraffeKey <giraffekey@tutanota.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
env_logger = "0.8"
log = "0.4"
serde = "1.0"
tokio = { version = "0.3", features = [] }

gun = { version = "0.1", path = "../.." }
gun-websockets-tokio = { version = "0.1", path = "../../plugins/websockets_tokio" }
