[package]
name = "gun-websockets-wasm-example"
version = "0.1.0"
authors = ["GiraffeKey <giraffekey@tutanota.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-std = { version = "1.7", features = ["attributes", "unstable"] }
env_logger = "0.8"
log = "0.4"
mogwai = "0.3"
serde = "1.0"
wasm-bindgen = "0.2"
web-sys = "0.3"

gun = { version = "0.1", path = "../.." }
gun-websockets-wasm = { version = "0.1", path = "../../plugins/websockets_wasm" }
