[package]
name = "gun-websockets-wasm-example"
version = "0.1.0"
authors = ["GiraffeKey <giraffekey@tutanota.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"

[features]
default = ["console_error_panic_hook"]

[dependencies]
async-std = { version = "1.7", features = ["attributes", "unstable"] }
console_log = "^0.1"
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
wasm-bindgen = "^0.2"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

gun = { version = "0.1", path = "../.." }
gun-websockets-wasm = { version = "0.1", path = "../../plugins/websockets_wasm" }

[dependencies.mogwai]
version = "^0.3"

[dependencies.web-sys]
version = "^0.3"
features = [
 	"HtmlInputElement",
]
