[package]
name = "gun-websockets-tokio"
version = "0.1.0"
authors = ["GiraffeKey <giraffekey@tutanota.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
log = "0.4"
serde_json = "1.0"
tokio = { version = "0.3", features = ["io-std", "macros", "rt-multi-thread", "stream", "time"] }
tokio-tungstenite = "0.12"
tungstenite = "0.11"
url = "2.2"

gun = { version = "0.1", path = "../.." }
