[package]
name = "gun-websockets-wasm"
version = "0.1.0"
authors = ["GiraffeKey <giraffekey@tutanota.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
async-std = { version = "1.7", features = ["attributes", "unstable"] }
async-trait = "0.1"
js-sys = "0.3"
log = "0.4"
serde_json = "1.0"
wasm-bindgen = "0.2"

gun = { version = "0.1", path = "../.." }

[dependencies.web-sys]
version = "0.3"
features = [
	"BinaryType",
	"Blob",
	"ErrorEvent",
	"FileReader",
	"MessageEvent",
	"ProgressEvent",
	"WebSocket",
]
